# prior-auth-agent

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
backend/: .dockerignore  Dockerfile  requirements.txt
backend/app/: config.py  main.py
backend/app/agent/: __init__.py  appeal.py  counterfactual.py  graph.py  retrieval.py  state.py  streaming.py
backend/app/api/: __init__.py  audit.py  auth.py  pdf_export.py  routes_audit.py  (+6 more)
backend/tests/: test_agent_graph.py  test_chart_parser.py  test_citation_scoring.py  test_evidence_extractor.py
data/: priorauth.db
data/gold_set/: v1.jsonl
data/patients/: sample_back_pain.json  sample_bariatric.json  sample_ra.json
data/policies/: aetna_humira_synthetic.txt  cigna_bariatric_synthetic.txt  uhc_mri_lumbar_synthetic.policy.json  uhc_mri_lumbar_synthetic.txt
docs/: architecture.md  eval_methodology.md  failure_modes.md  teardown_post_draft.md
frontend/: .gitignore  Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AppealPanel.tsx  CalibrationCurve.tsx  CitationCards.tsx  CitationViewer.tsx  ConfidenceMeter.tsx  CounterfactualPanel.tsx  CriteriaChecklist.tsx  DetermineForm.tsx  EvalDashboard.tsx  ModelCompare.tsx  PolicyUploader.tsx  PrecheckForm.tsx
frontend/lib/: api.ts  types.ts
infra/: cloudbuild.yaml  deploy.sh
scripts/: demo_extractor_offline.py  generate_synthea.py  ingest_real_policy.py  load_synthea_population.py  run_eval.py  seed_policies.py
(+45 files in other folders)
